# laspinas_traffic_management

./: .gitignore  ADMIN_FEATURES.md  AI_TRAFFIC_PREDICTION_TIMELINE_FEATURE.md  CORS_FIX_GUIDE.md  CRITICAL_PRODUCTION_FIX.md  DATABASE_PERSISTENCE_GUIDE.md  DUPLICATE_KEY_FIX.md  EMERGENCY_FIXES_SUMMARY.md  EMERGENCY_PHOTO_MODERATION_IMPLEMENTATION.md  ENUM_FIX_SUMMARY.md  ENVIRONMENT_SETUP.md  ERROR_FIXES_APPLIED.md  FINAL_SIMULATION_FIXES.md  FIREBASE_BACKEND_SYNC_GUIDE.md  FIREBASE_SETUP_COMPLETE.md  FIREBASE_SYNC_FIX.md  FIREBASE_SYNC_FIX_SUMMARY.md  FIREBASE_WEBSOCKET_FIX.md  FULLSCREEN_FEATURE_SUMMARY.md  FULLSCREEN_NAVIGATION_GUIDE.md  GEOCODING_CORS_FIX.md  GEOCODING_ENDPOINT_FIX.md  GEOCODING_FIX.md  GOOGLE_MAPS_LIKE_FEATURES_IMPLEMENTATION.md  GOOGLE_MAPS_WAZE_NAVIGATION_IMPLEMENTATION.md  GOOGLE_SIGNIN_VERIFICATION_FIX.md  HEATMAP_ROAD_ALIGNMENT_FIX.md  INCIDENT_PRONE_AREAS_IMPLEMENTATION.md  LEAPCELL_DEPLOYMENT.md  LEAPCELL_DEPLOYMENT_GUIDE.md  NAVIGATION_ARCHITECTURE.md  NAVIGATION_QUICK_START.md  POSTGRESQL_ENUM_FIX.md  POSTGRESQL_MIGRATION_GUIDE.md  PRODUCTION_DEPLOYMENT_CHECKLIST.md  PRODUCTION_ERRORS_FIX.md  README.md  REAL_TIME_TRAFFIC_HEATMAP_IMPLEMENTATION.md  ROUTE_ALTERNATIVES_FEATURE.md  ROUTE_VISUALIZATION_IMPLEMENTATION.md  (+34 more)
backend/: .dockerignore  .env  .env.example  .leapcellignore  APPLY_THIS_IN_SUPABASE.sql  Dockerfile  Dockerfile.leapcell  FIX_FIREBASE_ULTRA_SIMPLE.sql  RAILWAY_DEPLOYMENT.md  README-LEAPCELL.md  add_traffic_fields.py  alembic.ini  app.py  apply_firebase_fix.ps1  apply_firebase_fix.py  apply_firebase_migration.py  build.sh  (+64 more)
(+281 files in other folders)
